revert download csv function

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "start": "node index.js",
-      "dev": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prod_start": "NODE_ENV=production nodemon index.js"
   },
@@ -16,11 +16,13 @@
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
+    "csv-stringify": "^6.4.4",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "fast-csv": "^4.3.6",
     "json2csv": "^6.0.0-alpha.2",
     "mongoose": "^7.4.2",
     "passport": "^0.6.0",
