--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "C.M.Bharat",
   "license": "ISC",
   "dependencies": {
+    "@cyclic.sh/s3fs": "^1.2.9",
+    "aws-sdk": "^2.1473.0",
     "body-parser": "^1.20.2",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
